--- a/CSS/mystyle.css
+++ b/CSS/mystyle.css
@@ -15,7 +15,7 @@ html, body {
 }
 
 html{
-	background: radial-gradient(ellipse at bottom, #0D1E31, #111);
+	background: #000000;
 	background-size:100%; 
 	width:100%; 
 	height:100%;
@@ -171,28 +171,40 @@ html{
 	animation: 1s;
 }
 
-a{
-	text-decoration: none;
-}
-
 #navigation{
 	width: 100%;
 	height: 100px;
 	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-#navigation > a{
-	font-size: 50px;
-	margin: auto auto auto auto;
+	text-align: right;
+	justify-content: right;
+	background: #FFFFFF;
 }
 
 #navigation > a:hover{
 	color: white;
 }
 
-#pic{
-	width:500px;
-	height: 500px;
+#iconsBox{
+	width: 100%;
+	height: 100px;
+	display: flex;
+	text-align: right;
+	justify-content: right;
+	background: #FFFFFF;
+}
+
+#iconsBox > a{
+	width: 80px;
+	height: 80px;
+	margin: 10px 10px 10px 10px;
+}
+
+#linkedin{
+	width: 80px;
+	height: 80px;
+}
+
+#github{
+	width: 80px;
+	height: 80px;
 }
